# hlib

./: README.md  pyproject.toml
hlib/: __init__.py  core.py  llm_tools.py  types.py
hlib/catalog/: __init__.py  dynamic_enum.py  loader.py  portals.json  registry.py  schema.py  validate.py
hlib/data_recovery/adapters/: api_adapter.py  ckan_adapter.py
hlib/data_recovery/interfaces/: adapter.py  portal.py
hlib/data_recovery/portals/: generic_ckan_portal.py  portal_avoindata_fi.py  portal_dados_abertos_br.py  portal_data_gouv_fr.py  portal_data_gov_au.py  portal_data_gov_in.py  portal_data_gov_sg.py  portal_data_gov_uk.py  portal_data_gov_us.py  portal_datos_gob_es.py  portal_opendata_swiss.py
hlib/data_recovery/portals/brazil/: portal_dados_abertos_br.py
hlib/data_recovery/portals/france/: portal_data_gouv_fr.py
hlib/data_recovery/portals/india/: portal_data_gov_in.py
hlib/data_recovery/portals/singapore/: portal_data_gov_sg.py
tests/: live_recording.py  test_cassettes.py  test_catalog.py  test_core.py  test_core_search.py  test_data_recovery.py  test_integration.py  test_llm_tools.py
tests/cassettes/: avoindata_fi_get_dataset.json  avoindata_fi_search.json  data_gouv_fr_get_dataset.json  data_gouv_fr_search.json  data_gov_au_get_dataset.json  data_gov_au_search.json  data_gov_in_get_dataset.json  data_gov_in_search.json  data_gov_sg_get_dataset.json  data_gov_sg_search.json  data_gov_uk_get_dataset.json  data_gov_uk_search.json  data_gov_us_search.json  opendata_swiss_get_dataset.json  opendata_swiss_search.json
(+2 files in other folders)
