[tool.poetry]
name = "hlib-hipolita"
version = "0.3.1"
description = "This project is an implementation of the Hipolita framework"
authors = [
    "Matheus Erthal Amâncio da Silva <matheusamancio@id.uff.br>",
    "Raissa dos Santos Barcellos <raissa.barcellos@ime.uerj.br>"
]
license = "MIT"
readme = "README.md"
packages = [{ include = "hlib" }]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.24.0"
pandas = "^2.0.0"
aiohttp = ">=3.13.3,<3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "live: testes de integração real contra portais externos; rodar manualmente com `pytest -m live`",
]
addopts = "-m \"not live\""

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "aioresponses (>=0.7.8,<0.8.0)"
]
